add a confusion matrix

--- a/notebooks/01-KerasPoisonousMushrooms.ipynb
+++ b/notebooks/01-KerasPoisonousMushrooms.ipynb
@@ -11,216 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>edibility</th>\n",
-       "      <th>cap-shape</th>\n",
-       "      <th>cap-surface</th>\n",
-       "      <th>cap-color</th>\n",
-       "      <th>bruises</th>\n",
-       "      <th>odor</th>\n",
-       "      <th>gill-attachment</th>\n",
-       "      <th>gill-spacing</th>\n",
-       "      <th>gill-size</th>\n",
-       "      <th>gill-color</th>\n",
-       "      <th>...</th>\n",
-       "      <th>stalk-surface-below-ring</th>\n",
-       "      <th>stalk-color-above-ring</th>\n",
-       "      <th>stalk-color-below-ring</th>\n",
-       "      <th>veil-type</th>\n",
-       "      <th>veil-color</th>\n",
-       "      <th>ring-number</th>\n",
-       "      <th>ring-type</th>\n",
-       "      <th>spore-print-color</th>\n",
-       "      <th>population</th>\n",
-       "      <th>habitat</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>p</td>\n",
-       "      <td>x</td>\n",
-       "      <td>s</td>\n",
-       "      <td>n</td>\n",
-       "      <td>t</td>\n",
-       "      <td>p</td>\n",
-       "      <td>f</td>\n",
-       "      <td>c</td>\n",
-       "      <td>n</td>\n",
-       "      <td>k</td>\n",
-       "      <td>...</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>p</td>\n",
-       "      <td>k</td>\n",
-       "      <td>s</td>\n",
-       "      <td>u</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>e</td>\n",
-       "      <td>x</td>\n",
-       "      <td>s</td>\n",
-       "      <td>y</td>\n",
-       "      <td>t</td>\n",
-       "      <td>a</td>\n",
-       "      <td>f</td>\n",
-       "      <td>c</td>\n",
-       "      <td>b</td>\n",
-       "      <td>k</td>\n",
-       "      <td>...</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>p</td>\n",
-       "      <td>n</td>\n",
-       "      <td>n</td>\n",
-       "      <td>g</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>e</td>\n",
-       "      <td>b</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>t</td>\n",
-       "      <td>l</td>\n",
-       "      <td>f</td>\n",
-       "      <td>c</td>\n",
-       "      <td>b</td>\n",
-       "      <td>n</td>\n",
-       "      <td>...</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>p</td>\n",
-       "      <td>n</td>\n",
-       "      <td>n</td>\n",
-       "      <td>m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>p</td>\n",
-       "      <td>x</td>\n",
-       "      <td>y</td>\n",
-       "      <td>w</td>\n",
-       "      <td>t</td>\n",
-       "      <td>p</td>\n",
-       "      <td>f</td>\n",
-       "      <td>c</td>\n",
-       "      <td>n</td>\n",
-       "      <td>n</td>\n",
-       "      <td>...</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>p</td>\n",
-       "      <td>k</td>\n",
-       "      <td>s</td>\n",
-       "      <td>u</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>e</td>\n",
-       "      <td>x</td>\n",
-       "      <td>s</td>\n",
-       "      <td>g</td>\n",
-       "      <td>f</td>\n",
-       "      <td>n</td>\n",
-       "      <td>f</td>\n",
-       "      <td>w</td>\n",
-       "      <td>b</td>\n",
-       "      <td>k</td>\n",
-       "      <td>...</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>e</td>\n",
-       "      <td>n</td>\n",
-       "      <td>a</td>\n",
-       "      <td>g</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  edibility cap-shape cap-surface cap-color bruises odor gill-attachment  \\\n",
-       "0         p         x           s         n       t    p               f   \n",
-       "1         e         x           s         y       t    a               f   \n",
-       "2         e         b           s         w       t    l               f   \n",
-       "3         p         x           y         w       t    p               f   \n",
-       "4         e         x           s         g       f    n               f   \n",
-       "\n",
-       "  gill-spacing gill-size gill-color   ...   stalk-surface-below-ring  \\\n",
-       "0            c         n          k   ...                          s   \n",
-       "1            c         b          k   ...                          s   \n",
-       "2            c         b          n   ...                          s   \n",
-       "3            c         n          n   ...                          s   \n",
-       "4            w         b          k   ...                          s   \n",
-       "\n",
-       "  stalk-color-above-ring stalk-color-below-ring veil-type veil-color  \\\n",
-       "0                      w                      w         p          w   \n",
-       "1                      w                      w         p          w   \n",
-       "2                      w                      w         p          w   \n",
-       "3                      w                      w         p          w   \n",
-       "4                      w                      w         p          w   \n",
-       "\n",
-       "  ring-number ring-type spore-print-color population habitat  \n",
-       "0           o         p                 k          s       u  \n",
-       "1           o         p                 n          n       g  \n",
-       "2           o         p                 n          n       m  \n",
-       "3           o         p                 k          s       u  \n",
-       "4           o         e                 n          a       g  \n",
-       "\n",
-       "[5 rows x 23 columns]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pandas import read_csv\n",
     "srooms_df = read_csv('../data/agaricus-lepiota.data.csv')\n",
@@ -254,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -274,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -307,22 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(8124, 26)\n",
-      "Frist sample: [1 0 0 0 0 0 0 1 0 0 0 0 0 0 0 1 0 0 0 1 0 0 0 0 0 0]\n",
-      "  edibility (poisonous): 1\n",
-      "  ordr (pungent): [0 0 0 0 0 0 1 0 0]\n",
-      "  habitat (urban): [0 0 0 0 0 1 0]\n",
-      "  spore-print-color (black): [0 0 1 0 0 0 0 0 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(srooms_np.shape)\n",
     "print(\"Frist sample: {}\".format(srooms_np[0]))\n",
@@ -341,18 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "training data dims: (6499, 25), label dims: (6499, 1)\n",
-      "test data dims: (1625, 25), label dims: (1625, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "train, test = train_test_split(srooms_np, test_size = 0.2, random_state=7)\n",
@@ -480,29 +251,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "dense_3 (Dense)              (None, 20)                520       \n",
-      "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 20)                0         \n",
-      "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 1)                 21        \n",
-      "=================================================================\n",
-      "Total params: 541\n",
-      "Trainable params: 541\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Dropout\n",
@@ -531,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -555,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -567,50 +318,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Summary name dense_1/kernel:0 is illegal; using dense_1/kernel_0 instead.\n",
-      "INFO:tensorflow:Summary name dense_1/bias:0 is illegal; using dense_1/bias_0 instead.\n",
-      "INFO:tensorflow:Summary name dense_2/kernel:0 is illegal; using dense_2/kernel_0 instead.\n",
-      "INFO:tensorflow:Summary name dense_2/bias:0 is illegal; using dense_2/bias_0 instead.\n",
-      "Epoch 1/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.4649 - acc: 0.8297     \n",
-      "Epoch 2/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.1981 - acc: 0.9585     \n",
-      "Epoch 3/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.1163 - acc: 0.9725     \n",
-      "Epoch 4/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0862 - acc: 0.9783     \n",
-      "Epoch 5/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0680 - acc: 0.9818     \n",
-      "Epoch 6/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0581 - acc: 0.9835     \n",
-      "Epoch 7/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0460 - acc: 0.9874     \n",
-      "Epoch 8/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0403 - acc: 0.9889     \n",
-      "Epoch 9/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0377 - acc: 0.9897     \n",
-      "Epoch 10/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0342 - acc: 0.9905     \n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x123a12c88>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.fit(train_data, train_labels, epochs=10, batch_size=32, callbacks=[tensor_board])"
    ]
@@ -624,18 +334,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1625/1625 [==============================] - 0s\n",
-      "[0.012097288854420185, 0.99507689476013184]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "score = model.evaluate(test_data, test_labels, batch_size=1625)\n",
     "print(score)"
@@ -652,61 +353,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "backend: tensorflow\n",
-      "class_name: Sequential\n",
-      "config:\n",
-      "- class_name: Dense\n",
-      "  config:\n",
-      "    activation: relu\n",
-      "    activity_regularizer: null\n",
-      "    batch_input_shape: !!python/tuple [null, 25]\n",
-      "    bias_constraint: null\n",
-      "    bias_initializer:\n",
-      "      class_name: Zeros\n",
-      "      config: {}\n",
-      "    bias_regularizer: null\n",
-      "    dtype: float32\n",
-      "    kernel_constraint: null\n",
-      "    kernel_initializer:\n",
-      "      class_name: VarianceScaling\n",
-      "      config: {distribution: uniform, mode: fan_avg, scale: 1.0, seed: null}\n",
-      "    kernel_regularizer: null\n",
-      "    name: dense_1\n",
-      "    trainable: true\n",
-      "    units: 20\n",
-      "    use_bias: true\n",
-      "- class_name: Dropout\n",
-      "  config: {name: dropout_1, rate: 0.5, trainable: true}\n",
-      "- class_name: Dense\n",
-      "  config:\n",
-      "    activation: sigmoid\n",
-      "    activity_regularizer: null\n",
-      "    bias_constraint: null\n",
-      "    bias_initializer:\n",
-      "      class_name: Zeros\n",
-      "      config: {}\n",
-      "    bias_regularizer: null\n",
-      "    kernel_constraint: null\n",
-      "    kernel_initializer:\n",
-      "      class_name: VarianceScaling\n",
-      "      config: {distribution: uniform, mode: fan_avg, scale: 1.0, seed: null}\n",
-      "    kernel_regularizer: null\n",
-      "    name: dense_2\n",
-      "    trainable: true\n",
-      "    units: 1\n",
-      "    use_bias: true\n",
-      "keras_version: 2.0.4\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(model.to_yaml())\n",
     "definition = model.to_yaml()"
@@ -721,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -741,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -761,30 +410,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test sample 0 is poisonous.\n",
-      "Test sample 1 is poisonous.\n",
-      "Test sample 8 is poisonous.\n",
-      "Test sample 11 is poisonous.\n",
-      "Test sample 14 is poisonous.\n",
-      "Test sample 15 is poisonous.\n",
-      "Test sample 17 is poisonous.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "predictions = new_model.predict(test_data[0:25]).round()\n",
     "for i in range(25):\n",
     "    if predictions[i]:\n",
-    "        print('Test sample {} is poisonous.'.format(i))\n",
-    "        \n",
+    "        print('Test sample {} is poisonous.'.format(i))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Confusion Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = new_model.predict(test_data).round()\n",
+    "labels = test_labels[:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "cm = confusion_matrix(labels,predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import itertools\n",
+    "def plot_confusion_matrix(cm, classes,\n",
+    "                          normalize=False,\n",
+    "                          title='Confusion matrix',\n",
+    "                          cmap=plt.cm.Blues):\n",
+    "    \"\"\"\n",
+    "    This function prints and plots the confusion matrix.\n",
+    "    Normalization can be applied by setting `normalize=True`.\n",
+    "    \"\"\"\n",
+    "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
+    "    plt.title(title)\n",
+    "    plt.colorbar()\n",
+    "    tick_marks = np.arange(len(classes))\n",
+    "    plt.xticks(tick_marks, classes, rotation=45)\n",
+    "    plt.yticks(tick_marks, classes)\n",
+    "\n",
+    "    if normalize:\n",
+    "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
+    "        print(\"Normalized confusion matrix\")\n",
+    "    else:\n",
+    "        print('Confusion matrix, without normalization')\n",
+    "\n",
+    "    print(cm)\n",
+    "\n",
+    "    thresh = cm.max() / 2.\n",
+    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+    "        plt.text(j, i, cm[i, j],\n",
+    "                 horizontalalignment=\"center\",\n",
+    "                 color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.ylabel('True label')\n",
+    "    plt.xlabel('Predicted label')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_confusion_matrix(cm,['edible','poisonous'])\n",
+    "plt.show()"
    ]
   },
   {
