grammar and spelling edits

--- a/notebooks/01-TensorPoisonousMushrooms.ipynb
+++ b/notebooks/01-TensorPoisonousMushrooms.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Tensorflow versus Poisonous Mushrooms\n",
     "\n",
-    "After the [Keras Example](01-KerasPoisonousMushrooms.ipynb), this example builds a dense neural network as a comparsion. "
+    "After the [Keras Example](01-KerasPoisonousMushrooms.ipynb), let's build a tensorflow-based model as a comparision. "
    ]
   },
   {
@@ -15,11 +15,11 @@
    "source": [
     "## Feature Extraction \n",
     "\n",
-    "This example use feature extraction techniquies as the [Keras Example](01-KerasPoisonousMushrooms.ipynb).\n",
+    "This example uses the same feature extraction techniques as the [Keras Example](01-KerasPoisonousMushrooms.ipynb).\n",
     "\n",
     "In summary, the data prep follows these steps...\n",
     "1. Load a pandas dataframe from a csv file.\n",
-    "2. Transform categorial data to one-hot represention \n",
+    "2. Transform categorial data to one-hot representation. \n",
     "3. Split the training and test data sets.\n",
     "4. Extract edibility as labels."
    ]
@@ -27,7 +27,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from pandas import read_csv\n",
@@ -60,7 +62,7 @@
    "source": [
     "## Model Definition\n",
     "\n",
-    "Tensorflow requies a bit more work than Keras to define the network because we need to define the models parameters (i.e. the wiegths and biases).  Here is a Keras code snippnet for comparion: \n",
+    "Tensorflow requies a bit more work than Keras to define the network because we need to define the model's parameters (i.e. the weights and biases).  Here is a Keras code snippnet for comparison: \n",
     "\n",
     "```\n",
     "from keras.models import Sequential\n",
@@ -73,9 +75,9 @@
     "```\n",
     "\n",
     "Here are the key differences:\n",
-    "1. Tensor flow use name scoping to logically separate the layers.\n",
-    "2. Each dense layer defines and initializes the weights and biases varibales (implictly done in Keras)\n",
-    "3. Tensorflow doesn't use a sequential layers.  Instead, the model defines Tensor references between layers."
+    "1. Tensorflow uses name scoping to logically separate the layers.\n",
+    "2. Each dense layer defines and initializes weights and biases variables (implictly done in Keras).\n",
+    "3. Tensorflow doesn't use a sequential model.  It uses a graph.  The model defines Tensor references between layers."
    ]
   },
   {
@@ -122,11 +124,11 @@
     "Unlike Keras, TensorFlow doesn't provide pre-canned functions for training.  The model needs the following functions defined.\n",
     "\n",
     "1. Define a loss function.  The functions convert probabilities to logits.  The clip function prevents a ```log(0)```.  \n",
-    "2. Define a training functions.  Uses the loss to compute the gradients.\n",
-    "3. Define a accuracy functions to messure the \n",
+    "2. Define a training function.  Uses the loss to compute the gradients.\n",
+    "3. Define a accuracy function as a training metric.\n",
     "\n",
     "\n",
-    "Again Keras hides these detials by prodiving precanned loss and accuracy functions.  The same definition in keras is a one liner.\n",
+    "Again, Keras hides these details by providing pre-canned loss and accuracy functions.  The same definition in keras is a one liner.\n",
     "\n",
     "```\n",
     "model.compile(optimizer='adam',\n",
@@ -138,7 +140,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def loss(output, labels, from_logits=False):\n",
@@ -180,9 +184,9 @@
     "So, what's going on here?\n",
     "1. Define an input producer to batch samples and shuffle examples between epochs.\n",
     "2. Create SummaryWriter to write TensorBoard logs\n",
-    "3. Iterate over each batches\n",
-    "    * Print metrics every epoch(ish)\n",
-    "    * Write out metrices every epoch(ish)\n",
+    "3. Iterate over each batch\n",
+    "    * Print accuracy and loss every epoch\n",
+    "    * Write out accuracy and loss to a log every epoch\n",
     "4. Save parameters when done."
    ]
   },
@@ -198,17 +202,17 @@
       "create saver\n",
       "session started\n",
       "loaded data\n",
-      "Step 0: loss = 0.85, acc = 0.453 (0.038 sec)\n",
-      "Step 100: loss = 0.31, acc = 0.953 (0.032 sec)\n",
-      "Step 200: loss = 0.15, acc = 0.984 (0.020 sec)\n",
-      "Step 300: loss = 0.12, acc = 0.984 (0.017 sec)\n",
-      "Step 400: loss = 0.07, acc = 1.000 (0.018 sec)\n",
-      "Step 500: loss = 0.10, acc = 0.969 (0.018 sec)\n",
-      "Step 600: loss = 0.09, acc = 0.969 (0.018 sec)\n",
-      "Step 700: loss = 0.04, acc = 0.984 (0.018 sec)\n",
-      "Step 800: loss = 0.05, acc = 0.984 (0.022 sec)\n",
-      "Step 900: loss = 0.02, acc = 1.000 (0.017 sec)\n",
-      "Step 1000: loss = 0.06, acc = 0.984 (0.017 sec)\n",
+      "Step 0: loss = 0.88, acc = 0.531 (0.033 sec)\n",
+      "Step 100: loss = 0.37, acc = 0.875 (0.018 sec)\n",
+      "Step 200: loss = 0.26, acc = 0.922 (0.018 sec)\n",
+      "Step 300: loss = 0.26, acc = 0.938 (0.019 sec)\n",
+      "Step 400: loss = 0.18, acc = 0.922 (0.021 sec)\n",
+      "Step 500: loss = 0.08, acc = 1.000 (0.011 sec)\n",
+      "Step 600: loss = 0.11, acc = 0.969 (0.018 sec)\n",
+      "Step 700: loss = 0.04, acc = 1.000 (0.018 sec)\n",
+      "Step 800: loss = 0.07, acc = 1.000 (0.018 sec)\n",
+      "Step 900: loss = 0.04, acc = 1.000 (0.019 sec)\n",
+      "Step 1000: loss = 0.04, acc = 0.984 (0.018 sec)\n",
       "Saving\n",
       "Done training for 10 epochs, 1004 steps.\n"
      ]
@@ -303,7 +307,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
