grammar and spelling edits

--- a/notebooks/02-Yellowstone-visitors-part1.ipynb
+++ b/notebooks/02-Yellowstone-visitors-part1.ipynb
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The park's recreational visits are highly seasonable with peak season in June.  The park tracks monthly averages from the last four years on it [web site](https://www.nps.gov/yell/planyourvisit/visitationstats.htm).  A simple approach to predict the next years visitors, is to use these averages."
+    "The park's recreational visits are highly seasonable with the peak season in July.  The park tracks monthly averages from the last four years on it's [web site](https://www.nps.gov/yell/planyourvisit/visitationstats.htm).  A simple approach to predict the next years visitors, is to use these averages."
    ]
   },
   {
@@ -96,12 +96,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "## Monthly Average Accuracy\n",
+    " ## Monthly Average Accuracy\n",
     "\n",
-    "Before the next part models visits with a neural network, we'll measure the root mean squared error.  While the monthly averages aren't compeletly accurate, this method is very simple and explainable.    "
+    "Before this example uses Keras to predict visitors, we'll measure the monthly average method's root mean squared error.  While the monthly averages aren't compeletly accurate, this method is very simple and explainable.    "
    ]
   },
   {
