grammar and spelling edits

--- a/notebooks/02-Yellowstone-visitors-part2.ipynb
+++ b/notebooks/02-Yellowstone-visitors-part2.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# LSTM Time Series Example\n",
     "\n",
-    "Before we get into the example, lets talk about old fashioned computer memory.  Mercury delay lines are an early form of computer memory.  They basically recycled electrical signals until they where needed.  They also could replace or reshape the signal with new information (forgeting the old information).  \n",
+    "Before we get into the example, let's talk about old fashioned computer memory.  Mercury delay lines are an early form of computer memory.  They basically recycled electrical signals until they where needed.  They also could replace or reshape the signal with new information (i.e. forgeting the old information).  \n",
     "\n",
     "![Mercury Delay Line](https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/SEACComputer_010.jpg/1280px-SEACComputer_010.jpg?1496451678697)\n",
     "\n",
@@ -180,7 +180,7 @@
    "source": [
     "## Convert to Stationary Data\n",
     "\n",
-    "Like the visitors, the weather contains seasonal trends. We'll convert all the values to the change over the last month."
+    "Like the visitors, the weather contains seasonal trends.  We'll convert all the values to the changes over the last month.  The differences remove the season trends from the dataset.  This conversion from non-stationary to stationary helps model longer term changes."
    ]
   },
   {
@@ -300,7 +300,7 @@
    "source": [
     "## Label Data\n",
     "\n",
-    "The label is the proceeding month's change in visitors.  This makes the training set a superived training set."
+    "The label is the proceeding month's change in visitors.  This makes the training set a supervised training set."
    ]
   },
   {
@@ -481,23 +481,25 @@
     "\n",
     "#### Stateful vs Stateless LSTMs\n",
     "\n",
-    "* Stateless LSTM cleared out after each batch.  By default, Keras uses stateless LSTMs. \n",
+    "* Stateless LSTMs reinitialize the state after each batch.  By default, Keras uses stateless LSTMs. \n",
     "* Stateful LSTMs retain memory across batches.  model.reset_states() will clear out the state.\n",
     "\n",
-    "If model uses a larger batch than this example, Stateless LSTM train and update the gradients more effeciently becuase state is only maintained over one batch.\n",
+    "If the model uses a larger batch than this example, the Stateless LSTM could update the gradients more efficiently because the state is only maintained over one batch.\n",
     "\n",
-    "This examle only use a batch size of one, so a stateless LSTM will only remember one month.  Not very helpful.\n",
+    "This example only uses a batch size of one, so a stateless LSTM will only remember one month.  Not very helpful.\n",
     "\n",
     "\n",
     "### Dense Layers\n",
     "\n",
-    "The model add a hidden layer becuase why not?  The model also uses a single neuron for the output to predict next months visitors.  "
+    "The model adds a hidden layer because why not?  The model also uses a single neuron for the layer output to predict next months visitors.  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "batch_size = 1 # required for stateful LSTM\n",
@@ -518,7 +520,7 @@
    "source": [
     "### Optimizer \n",
     "\n",
-    "Unlike the first example, this models predicts a scale value and not a classification.  Thus the loss function minimized the mean square error. "
+    "Unlike the first example, this model predicts a scalar value and not a class probability.  Thus the loss function minimizes the mean square error. "
    ]
   },
   {
@@ -577,7 +579,7 @@
    "source": [
     "## Create Predictions\n",
     "\n",
-    "We'll need to invert the scaling plus convert to absoult values."
+    "To get the monthly visitors, We'll need to invert the scaling plus convert to absoult values."
    ]
   },
   {
